Add search field elements

--- a/contact-finder/contact-finder.html
+++ b/contact-finder/contact-finder.html
@@ -2,6 +2,11 @@
 <html>
   <head><title>Contact Finder</title></head>
   <body>
+    <label for="search">Search by contact name: </label>
+    <input type="text" id="search">
+    <button>Search</button>
+
+    <p></p>
 
     <script src="contact-finder.js"></script>
   </body>
